MCR 2997 fix pmd issues in mycore base (#2228)
* MCR-2997 AvoidThrowingNullPointerException

* MCR-2997 MethodNamingConventions

* MCR-2997 BrokenNullCheck

* MCR-2997 AvoidReassigningParameters

* MCR-2997 CompareObjectsWithEquals

* MCR-2997 FieldDeclarationsShouldBeAtStartOfClass

* MCR-2997 AppendCharacterWithChar

* MCR-2997 CollapsibleIfStatements

* MCR-2997 SimplifiableTestAssertion

* MCR-2997 UnnecessaryBooleanAssertion

* MCR-2997 InefficientStringBuffering

* MCR-2997 UnusedFormalParameter

* MCR-2997 AvoidThrowingRawExceptionTypes

* MCR-2997 AvoidPrintStackTrace

* MCR-2997 AvoidCatchingThrowable

* MCR-2997 UnusedPrivateMethod

* MCR-2997 UnnecessaryReturn

* MCR-2997 SimplifyConditional

* MCR-2997 UnnecessaryConstructor

* MCR-2997 ImplicitSwitchFallThrough

* MCR-2997 UnusedLocalVariables

* MCR-2997 AvoidThrowingNewInstanceOfSameException

* MCR-2997 AssignmentToNoneFinalStatic

* MCR-2997 SingularField

* MCR-2997 UnnecessaryImport

* MCR-2997 OneDeclarationPerLine

* MCR-2997 UnnecessaryFullyQualifiedName

* MCR-2997 NPathComplexity

* MCR-2997 SimplifyBooleanReturns

* MCR-2997 UnusedPrivateField

* MCR-2997 UncommentedEmptyMethod

* MCR-2997 NcssCount

* fix Codacy problems

* Implements suggested changes and fixed formatting issues with the changes of "CollapsibleIfStatements"

* fixed some general issues

* Fix MCRACCESSRULE stringsAreEqual check

* Corrects a comment

* Fixed formatting issues with &&

* Fix issues with rulesparser and remove ClassnamingRule

Methods that were falsely removed are restored, MCRRuleParser errors were fixed,comment was corrected. Error with MCRTransformerPipe.transform was removed by undoing changes.

* Change IllegalArgumentException to MCRException in MCRXMLContent